# projet_scoring

./: .gitignore  README.md  code.ipynb  code.py  code_arthur.py  code_complet.ipynb  code_isa.ipynb  credit.xlsx  main.py  modelisation.ipynb  outliers.ipynb  pyproject.toml
brouillon/: code.ipynb  code_arthur.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
